--- a/homework/section1/index.css
+++ b/homework/section1/index.css
@@ -4,12 +4,20 @@
     padding: 0;
     font-family: "Pretendard Variable";
 }
+
+.body{
+    height: 100%;
+}
+
 .CSS_레이아웃{
     width: 1920px;
-    height: 100vw;
+    height: auto;
+    min-height: 100%;
+    padding-bottom: 160px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 24px;
 }
 
 
@@ -187,8 +195,11 @@
 }
 
 .CSS_푸터 {
+    top: 160px;
     width: 100%;
-    height: 160px;  
+    height: 160px;
+    position: relative;  
+    transform: translateY(-100%);
     background: var(--Gray-Gray-50, #F2F2F2);
     display: flex;
     justify-content: center;
