[240830] view 전체 센터 수정함

--- a/homework/section1/index.css
+++ b/homework/section1/index.css
@@ -10,13 +10,15 @@
 }
 
 .CSS_레이아웃{
-    width: 1920px;
+    width: 100vw;
     height: auto;
     min-height: 100%;
     padding-bottom: 40px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    
 }
 
 
