--- a/index.css
+++ b/index.css
@@ -71,7 +71,9 @@ header h1 {
 .headerBanner img {
   position: absolute;
   width: 100%;
-  bottom: -150%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 nav {
