--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ div.bar {
 
 div.top-title {
     height: 4rem;
-    background: blue; 
+    /* background: blue;  */
     padding-left: 15vw;
     padding-right: 15vw;
     padding-top: 0.5rem;
@@ -58,14 +58,14 @@ div.top-title {
 
 div.top-title > p {
     height: 3rem;
-    background: green; 
+    /* background: green;  */
     font-size: 2rem;
     line-height: 3rem;
 }
 
 div.main-banner {
     height: 11rem;
-    background: pink;
+    /* background: pink; */
     padding-left: 15vw;
     padding-right: 15vw;
 }
@@ -88,7 +88,7 @@ div.tab-view {
     display: flex;
     gap: 1rem;
     align-items: center;
-    background: red;
+    /* background: red; */
 }
 
 div.tab-view > button
@@ -161,20 +161,20 @@ div.flexcontainer > div.flexchild-left {
     width: 60vw;
     height: 73rem;
     padding-left: 15vw;
-    background: yellow;
+    /* background: yellow; */
 }
 
 div.flexcontainer > div.flexchild-right {
     width: 40vw;
     height: 73rem;
     padding-right: 15vw;
-    background: yellowgreen;
+    /* background: yellowgreen; */
 }
 
 form.diary-util {
     border: 0.1rem solid var(--subtlegray);
     border-radius: 1rem;
-    background: pink;
+    /* background: pink; */
     display: flex;
     flex-direction: column;
     position: relative;
@@ -192,7 +192,7 @@ form.diary-util > p.title
     font-weight: bold;
     line-height: 3rem;
     text-align: left;
-    background: green;
+    /* background: green; */
     margin-bottom: 3rem;
     margin-left: 2rem;
     margin-top: 1rem;
@@ -205,7 +205,7 @@ form.diary-util > p.subtitle, p.text-input-string
     font-weight: bold;
     line-height: 2.5rem;
     text-align: left;
-    background: skyblue;
+    /* background: skyblue; */
     margin-bottom: 2rem;
     margin-left: 2rem;
 }
@@ -294,4 +294,55 @@ input[type="radio"]
     transform: translateY(-0.075em);
     display: grid;
     place-content: center;
+}
+
+li.flexchild
+{
+    width: 30rem;
+    height: 30rem;
+    padding: 1rem;
+}
+
+li.flexchild > div.list-item-border
+{
+    border: 0.1rem solid var(--lightgray);
+    border-radius: 1rem;
+}
+
+ul.flexlist
+{
+    width: 100rem;
+    height: 73rem;
+    /* background: aqua; */
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+}
+
+div.diary-listitem-bg
+{
+    background-image: url("../asset/png/4ae621ed2ead07f5b36fb83001247dba.png");
+    border-radius: 1rem;
+    height: 20rem;
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+div.diary-listitem-status
+{
+    display: flex;
+    justify-content: space-between;
+    font-size: 2rem;
+    color: var(--lightgray);
+}
+
+div.diary-listitem-summary
+{
+    font-size: 1rem;
+    font-weight: bold;
 }
