--- a/index.css
+++ b/index.css
@@ -96,8 +96,10 @@ nav ul li.active {
 section {
   display: flex;
   gap: 24px;
-  padding-bottom: 40px;
   align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-bottom: 40px;
 }
 section .empty {
   text-align: center;
