--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -1,19 +1,255 @@
 *{
     margin:0;
-    height:100vh;
+    /* height:100vh; */
     background-color:#fff;
 }
 header{
     display:flex;
     justify-content:center;
+    margin-top:100px;
+    /* width:1920px;
+    height:164px; */
+    /* background-color:#000; */
 }
 header h1{
     width:1920px;
     height:164px;
     background-color:#000;
-    /* text-align:center; */
+    text-align:center;
     color:#fff;
     line-height: 164px;
     border-radius:24px;
     font-size:80px;
+}
+
+.content{
+    width:100vw;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    margin-top:80px;
+}
+.content .name{
+    width:1168px;
+    height:40px;
+    margin:20px 0;
+}
+.name b{
+    line-height:40px;
+    /* background-color: #000; */
+}
+.content .banner{
+    width:1920px;
+    height:240px;
+    /* background-color:#000; */
+    display:flex;
+    justify-content:center;
+}
+.content .banner .banner_img{
+    width:1168px;
+    height:240px;
+    background-image:url(../img/Rectangle\ 1.png);
+    background-size:1168px 240px;
+    border-radius:24px;
+}
+
+.content .select_bg{
+    width:1920px;
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+.content .select{
+    width:1168px;
+    height:48px;
+    line-height:48px;
+    margin:30px 0;
+}
+.content .select a{
+    font-size:24px;
+    text-decoration:none;
+}
+.content .select a.seleted{
+    color:#000;
+    text-decoration: none;
+    border-bottom:2px solid #000;
+}
+.content .select a:last-child{
+    margin-left:20px;
+}
+.content .select .no_select{
+    color:#ababab;
+}
+
+.content .content_box{
+    width:1168px;
+    display:flex;
+    /* justify-content:center; */
+    flex-wrap:wrap;
+    gap:16px;
+    position:relative;
+}
+.content_box .emotion p{
+    font-size:14px;
+    font-weight:400;
+}
+.content_box .content_title{
+    font-size:18px;
+    font-weight:700;
+}
+.content .content_box .content1,.content2,.content3,.content4,.content5,.content6{
+    width:380px;
+    height:373px;
+    border-radius:16px;
+    /* padding:0 0 16px 0; */
+    /* background:#000; */
+}
+.content .content_box .content1 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 47.png);
+}
+.content .content_box .content2 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 46.png);
+}
+.content .content_box .content3 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 48.png);
+}
+.content .content_box .content4 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 49.png);
+}
+.content .content_box .content5 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 25.png);
+}
+.content .content_box .content6 .content_bg{
+    width:380px;
+    height:285px;
+    border-radius:16px;
+    background-image:url(../img/Frame\ 49.png);
+}
+.content_bt{
+    padding:8px;
+}
+.content_bt .emotion{
+    display:flex;
+    justify-content:space-between;
+}
+.content_bt .emotion p{
+    padding:8px 0 8px 0;
+}
+
+.write{
+    border:1px solid #D4D3D3;
+    border-radius:16px;
+    padding:24px;
+    position:absolute;
+    top:0;
+    right:0;
+}
+.write .em_title p{
+    font-size:20px;
+    font-weight:600;
+    width:312px;
+    height:24px;
+    gap:8px;
+    margin:20px 0;
+}
+.write .em_menu{
+    width:312px;
+    height:68px;
+    display:flex;
+    flex-wrap:wrap;
+}
+.write .em_menu div{
+    width:94px;
+    height:24px;
+}
+.write .em_menu div input{
+    margin-right:10px;
+}
+.write .write_title{
+    width:312px;
+    height:76px;
+}
+.write .write_title p{
+    margin:20px 0;
+}
+.write .write_title input{
+    width:312px;
+    height:48px;
+    border-radius:8px;
+    border:1px solid #D4D3D3;
+    padding:0;
+    text-align:center;
+}
+.write .write_memo p{
+    margin:20px 0;
+}
+.write .write_memo input{
+    width:312px;
+    height:128px;
+    border-radius:8px;
+    border:1px solid #D4D3D3;
+    padding:0;
+    text-align:center;
+}
+.write .write_btn button{
+    width:312px;
+    height:48px;
+    border-radius:8px;
+    padding:8px 10px 8px 10px;
+    border:none;
+    background-color:#c7c7c7;
+    margin-top:30px;
+    color:#f2f2f2;
+    font-size:18px;
+    font-weight:600;
+}
+
+footer{
+    display: flex;
+    justify-content:center;
+    height:160px;
+}
+footer .ft_bg{
+    width:100vw;
+    /* height:160px; */
+    border-radius:1px 0 0 0;
+    padding:24px 20px 24px 20px;
+    background-color:#f2f2f2;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+footer .ft_bg p{
+    background:#f2f2f2;
+    padding:17px 0;
+}
+footer .ft_bg p:firts-child{
+    font-size:20px;
+    font-weight:700;
+    line-height:16px;
+}
+footer .ft_bg p:nth-child(2){
+    font-size:14px;
+    font-weight:400;
+    color:#5f5f5f;
+}
+footer .ft_bg p:nth-child(3){
+    font-size:14px;
+    font-weight:300;
+    color:#919191;
 }
