--- a/CSS&JS 마스터/일기보관함.css
+++ b/CSS&JS 마스터/일기보관함.css
@@ -95,18 +95,16 @@ main {
 
 .storage_body {
     width: 100%;
-    height: 1167px;
+    height: auto;
     gap: 24px;
     display: flex;
 }
 
 #storage_leftBody{
-    width: 784px;
-    height: 1167px;
+    width: 100%;
+    height: 100%;
     gap: 24px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
