--- a/homework/diary.css
+++ b/homework/diary.css
@@ -63,7 +63,7 @@
     gap: 10px;
     align-self: stretch;
 }
-
+/* 
 .메뉴이름 {
     display: flex;
     width: 1150px;
@@ -71,7 +71,30 @@
     align-content: center;
     gap: 16px;
     flex: 1 0 0;
+} */
+
+.tabcontent {
+    display: none;
+  }
+  
+.tablink {
+    background-color: #f2f2f2;
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    cursor: pointer;
 }
+  
+.tablink:hover {
+    background-color: #ddd;
+}
+  
+.tabs {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+}
+
 
 .메인화면 {
     display: flex;
