refactor: 다이어리 추가 기능 리팩토링

--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -35,7 +35,7 @@
 }
 .logo {
   display: flex;
-  width: 120px;
+  width: 130px;
   height: 40px;
   align-items: center;
   gap: 10px;
@@ -127,6 +127,9 @@
   gap: 24px;
   align-self: stretch;
   flex-wrap: wrap;
+}
+.diary_detail {
+  text-decoration: none;
 }
 .diary_entry {
   display: flex;
