--- a/homework/index.css
+++ b/homework/index.css
@@ -4,18 +4,24 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container {
   border: 2px solid aqua;
   display: flex;
   flex-direction: column;
   width: 1920px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   align-items: center;
 }
 
 .header {
   display: flex;
   flex-direction: column;
+  width: 1168px;
 }
 
 #header-name {
@@ -27,13 +33,34 @@
   margin-bottom: 24px;
 }
 
+.nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+
 .title-list {
   display: flex;
+  align-items: flex-start;
   width: 1168px;
   gap: 40px;
-  /* border: 2px solid crimson; */
+  border: 2px solid crimson;
   margin-top: 25px;
+}
+
+.mood-selection-wrapper {
+  display: flex;
+  align-items: flex-start;
+  width: 1168px;
+  border: 2px solid crimson;
   margin-bottom: 40px;
+}
+
+#mood-radio {
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-300, #C7C7C7);
+  background: var(--Gray-W, #FFF);
 }
 
 #dairy-title {
@@ -56,25 +83,18 @@
 .body {
   display: flex;
   gap: 24px;
-  /* border: 2px solid yellowgreen; */
+  border: 2px solid yellowgreen;
   margin-bottom: 40px;
 }
 
 #dairy-list {
-  /* border: 2px solid pink; */
+  border: 2px solid pink;
   width: 800px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 24px;
 }
-
-/* .dairy-row {
-  display: flex;
-  gap: 24px;
-  margin-bottom: 24px;
-  border: 2px solid blue;
-} */
 
 .dairy {
   display: flex;
@@ -83,6 +103,19 @@
   height: 375px;
   /* border: 2px solid blue; */
   gap: 16px;
+  transition: transform 0.5s;
+}
+
+.dairy img {
+  transition: filter 0.5s;
+}
+
+.dairy:hover {
+  transform: scale(1.1);
+}
+
+.dairy:hover img {
+  filter: blur(5px);
 }
 
 .mood-img {
@@ -103,10 +136,192 @@
   justify-content: space-between;
 }
 
+.mood-행복해요 {
+  color: #EA5757;
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.mood-슬퍼요 {
+  color: #28B4E1;
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.mood-놀랐어요 {
+  color: #D59029;
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.mood-화나요 {
+  color: var(--Gray-Gray-600, #777);
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.mood-기타 {
+  color: #A229ED;
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.created-at {
+  color: var(--Gray-Gray-500, #919191);
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.my-title {
+  font-family: "Pretendard Variable";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+}
+
 #dairy-generator {
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  align-items: center;
   width: 360px;
-  height: 605px;
+  gap: 40px;
+  border-radius: 16px;
+  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+  background: var(--Gray-W, #FFF);
+}
+
+#generator-header {
+  width: 100%;
+  height: 24px;
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 24px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 700;
   border: 2px solid black;
+}
+
+#generator-body {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+#mood-question-title {
+  border: 2px solid pink;
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+#mood-radio-area {
+  border: 2px solid pink;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.mood-radio-instance {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.mood-radio-instance > input {
+  accent-color: #000;
+  width: 20px;
+  height: 20px;
+  align-content: center;
+}
+
+.mood-radio-instance > label {
+  color: var(--Gray-Gray-800, #333);
+  font-family: "Pretendard Variable";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+#mood-text-area {
+  width: 100%;
+  border: 2px solid pink;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.mood-textbox {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.mood-textbox-heading {
+  border: 2px solid pink;
+  color: var(--Gray-Gray-800, #333);
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.mood-textbox-input {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+  background: var(--Gray-W, #FFF);
+}
+
+#generator-footer {
+  width: 100%;
+}
+
+#gen-dairy-btn {
+  width: 100%;
+  height: 48px;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 8px;
+  background: var(--Gray-Gray-300, #C7C7C7);
+  color: var(--Gray-Gray-50, #F2F2F2);
+  font-family: "Pretendard Variable";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+#gen-dairy-btn:hover {
+  border: 2px solid skyblue;
+  background-color: #333;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
