--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 :root {
-  ---font-color-black: #000000;
   --font-color-1: #28b4e1;
   --font-color-2: #d59029;
   --font-color-3: #777777;
@@ -8,6 +7,7 @@
   --font-color-5: #a229ed;
   --font-color-6: #ababab;
   --font-color-7: #919191;
+  --font-color-8: #1c1c1c;
   --bg-color-1: #f2f2f2;
   --bg-color-2: #c7c7c7;
   --border-color-1: #d4d3d3;
@@ -36,6 +36,10 @@ ul {
   list-style: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .loaderBox {
   position: fixed;
   width: 100%;
@@ -51,30 +55,36 @@ ul {
 .loader {
   width: 60px;
   aspect-ratio: 4;
-  background: radial-gradient(circle closest-side, #000 90%, rgba(0, 0, 0, 0)) 0/33.3333333333%
-    100% space;
+  background: radial-gradient(circle closest-side, #000 90%, rgba(0, 0, 0, 0)) 0/33.3333333333% 100% space;
   -webkit-clip-path: inset(0 100% 0 0);
-  clip-path: inset(0 100% 0 0);
+          clip-path: inset(0 100% 0 0);
   animation: l1 1s steps(4) infinite;
 }
 
 @keyframes l1 {
   to {
     -webkit-clip-path: inset(0 -34% 0 0);
-    clip-path: inset(0 -34% 0 0);
+            clip-path: inset(0 -34% 0 0);
   }
 }
+html,
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-1);
-  color: var(--font-color-black);
+  color: #000;
+  letter-spacing: -0.1px;
+  height: auto;
+  min-height: 100%;
+  padding-bottom: var(--footerHeight);
 }
 
 header,
 section,
 .footerInner,
 nav,
-.headerBanner {
+.headerBanner,
+.detailWrap,
+.editWrap {
   max-width: var(--width);
   margin: 0 auto;
 }
@@ -91,8 +101,8 @@ header h1 {
 }
 header .toggleSwitch input {
   -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   position: relative;
 }
 
@@ -127,7 +137,7 @@ nav ul.navMenu li {
 }
 nav ul.navMenu li.active {
   font-weight: bold;
-  border-bottom: 1px solid var(--font-color-black);
+  border-bottom: 2px solid #000;
 }
 nav .navBottom {
   display: flex;
@@ -160,17 +170,47 @@ nav .navBottom .filterSearchBox .searchBox {
   background-position: 12px center;
   background-repeat: no-repeat;
   border: 1px solid var(--border-color-2);
-  padding: 12px 48px;
+  padding: 0px 20px 0px 48px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  overflow: hidden;
 }
-nav .navBottom .filterSearchBox .searchBox::-moz-placeholder {
+nav .navBottom .filterSearchBox .searchBox select {
+  width: 100px;
+  border: none;
+  padding-left: 5px;
+  padding-right: 24px;
+  border-radius: 8px;
+  background-image: url("../img/down_fill_light_m.svg");
+  background-repeat: no-repeat;
+  background-position: 90% center;
+  font-size: var(--font-size-1);
+  -o-appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+nav .navBottom .filterSearchBox .searchBox select:focus {
+  outline: none;
+}
+nav .navBottom .filterSearchBox .searchBox input[type=search] {
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+nav .navBottom .filterSearchBox .searchBox input[type=search]::-moz-placeholder {
   color: var(--font-color-6);
-  font-size: 16px;
+  font-size: var(--font-size-1);
   font-weight: 500;
 }
-nav .navBottom .filterSearchBox .searchBox::placeholder {
+nav .navBottom .filterSearchBox .searchBox input[type=search]::placeholder {
   color: var(--font-color-6);
-  font-size: 16px;
+  font-size: var(--font-size-1);
   font-weight: 500;
+}
+nav .navBottom .filterSearchBox .searchBox input[type=search]:focus {
+  outline: none;
 }
 nav .navBottom .diaryWritePopBtn {
   width: 110px;
@@ -194,4 +234,110 @@ footer .footerInner {
   display: flex;
   flex-direction: column;
   gap: 32px;
-} /*# sourceMappingURL=index.css.map */
+}
+
+.diaryWrite {
+  width: 360px;
+  border-radius: 16px;
+  border: 1px solid var(--border-color-1);
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.diaryWrite h3 {
+  font-size: var(--font-size-4);
+  font-weight: 700;
+}
+.diaryWrite .moodTypeRadio {
+  font-size: var(--font-size-2);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.diaryWrite .moodTypeRadio .radioWrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.diaryWrite .moodTypeRadio .radioWrap label {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+.diaryWrite .moodTypeRadio .radioWrap input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  box-shadow: 0 0 0 2px #777;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+}
+.diaryWrite .moodTypeRadio .radioWrap input:checked {
+  background-color: #111;
+  border: 3px solid #fff;
+  box-shadow: 0 0 0 2px #000;
+}
+.diaryWrite .moodTypeRadio span {
+  display: block;
+  font-size: var(--font-size-3);
+}
+.diaryWrite .diaryContent {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.diaryWrite .diaryContent label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.diaryWrite .diaryContent label span {
+  font-weight: 500;
+  font-size: var(--font-size-1);
+}
+.diaryWrite .diaryContent input,
+.diaryWrite .diaryContent textarea {
+  width: 100%;
+  border: 1px solid var(--border-color-1);
+  padding: 12px 16px;
+  border-radius: 8px;
+}
+.diaryWrite .diaryContent input::-moz-placeholder, .diaryWrite .diaryContent textarea::-moz-placeholder {
+  color: var(--font-color-6);
+  font-weight: 500;
+  font-size: 16px;
+}
+.diaryWrite .diaryContent input::placeholder,
+.diaryWrite .diaryContent textarea::placeholder {
+  color: var(--font-color-6);
+  font-weight: 500;
+  font-size: 16px;
+}
+.diaryWrite .diaryContent input {
+  height: 48px;
+}
+.diaryWrite .diaryContent textarea {
+  height: 128px;
+}
+.diaryWrite .diaryWriteBtn {
+  height: 48px;
+  border-radius: 8px;
+  background-color: var(--bg-color-2);
+  color: #fff;
+  border: none;
+  font-size: var(--font-size-2);
+  font-weight: 600;
+}
+.diaryWrite .diaryWriteBtn.active {
+  background-color: #000;
+}
+
+#suneditor_editArea.sun-editor .se-wrapper .se-placeholder {
+  color: var(--font-color-6);
+  font-size: 16px;
+  font-weight: 500;
+}/*# sourceMappingURL=index.css.map */
