--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,4 @@
 :root {
-  --font-color-black: #000000;
   --font-color-1: #28b4e1;
   --font-color-2: #d59029;
   --font-color-3: #777777;
@@ -7,6 +6,7 @@
   --font-color-5: #a229ed;
   --font-color-6: #ababab;
   --font-color-7: #919191;
+  --font-color-8: #1c1c1c;
 
   --bg-color-1: #f2f2f2;
   --bg-color-2: #c7c7c7;
@@ -40,6 +40,10 @@ ul {
   list-style: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .loaderBox {
   position: fixed;
   width: 100%;
@@ -66,17 +70,24 @@ ul {
   }
 }
 
+html,
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-1);
-  color: var(--font-color-black);
+  color: #000;
+  letter-spacing: -0.1px;
+  height: auto;
+  min-height: 100%;
+  padding-bottom: var(--footerHeight);
 }
 
 header,
 section,
 .footerInner,
 nav,
-.headerBanner {
+.headerBanner,
+.detailWrap,
+.editWrap {
   max-width: var(--width);
   margin: 0 auto;
 }
@@ -131,7 +142,7 @@ nav {
 
       &.active {
         font-weight: bold;
-        border-bottom: 1px solid #000;
+        border-bottom: 2px solid #000;
       }
     }
   }
@@ -169,12 +180,46 @@ nav {
         background-position: 12px center;
         background-repeat: no-repeat;
         border: 1px solid var(--border-color-2);
-        padding: 12px 48px;
+        padding: 0px 20px 0px 48px;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        overflow: hidden;
 
-        &::placeholder {
-          color: var(--font-color-6);
-          font-size: 16px;
-          font-weight: 500;
+        select {
+          width: 100px;
+          border: none;
+          padding-left: 5px;
+          padding-right: 24px;
+          border-radius: 8px;
+          background-image: url("../img/down_fill_light_m.svg");
+          background-repeat: no-repeat;
+          background-position: 90% center;
+          font-size: var(--font-size-1);
+
+          -o-appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+
+          &:focus {
+            outline: none;
+          }
+        }
+
+        input[type="search"] {
+          border: none;
+          width: 100%;
+          height: 100%;
+
+          &::placeholder {
+            color: var(--font-color-6);
+            font-size: var(--font-size-1);
+            font-weight: 500;
+          }
+          &:focus {
+            outline: none;
+          }
         }
       }
     }
@@ -198,9 +243,125 @@ nav {
 footer {
   background-color: var(--bg-color-1);
   padding: 24px 0;
+
   .footerInner {
     display: flex;
     flex-direction: column;
     gap: 32px;
   }
+}
+
+.diaryWrite {
+  width: 360px;
+  border-radius: 16px;
+  border: 1px solid var(--border-color-1);
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+
+  h3 {
+    font-size: var(--font-size-4);
+    font-weight: 700;
+  }
+
+  .moodTypeRadio {
+    font-size: var(--font-size-2);
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    .radioWrap {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+
+      label {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+      }
+
+      input {
+        -webkit-appearance: none; // 웹킷 브라우저에서 기본 스타일 제거
+        -moz-appearance: none; // 모질라 브라우저에서 기본 스타일 제거
+        appearance: none; // 기본 브라우저에서 기본 스타일 제거
+        width: 18px;
+        height: 18px;
+        box-shadow: 0 0 0 2px #777; // 라인
+        border-radius: 50%;
+        outline: none; // focus 시에 나타나는 기본 스타일 제거
+        cursor: pointer;
+        &:checked {
+          background-color: #111; // 체크 시 내부 원 색상
+          border: 3px solid #fff; // 라인이 아닌, 라인과 원 사이 색상
+          box-shadow: 0 0 0 2px #000; // 라인
+        }
+      }
+    }
+
+    span {
+      display: block;
+      font-size: var(--font-size-3);
+    }
+  }
+
+  .diaryContent {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    label {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      span {
+        font-weight: 500;
+        font-size: var(--font-size-1);
+      }
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      border: 1px solid var(--border-color-1);
+      padding: 12px 16px;
+      border-radius: 8px;
+
+      &::placeholder {
+        color: var(--font-color-6);
+        font-weight: 500;
+        font-size: 16px;
+      }
+    }
+
+    input {
+      height: 48px;
+    }
+
+    textarea {
+      height: 128px;
+    }
+  }
+
+  .diaryWriteBtn {
+    height: 48px;
+    border-radius: 8px;
+    background-color: var(--bg-color-2);
+    color: #fff;
+    border: none;
+    font-size: var(--font-size-2);
+    font-weight: 600;
+
+    &.active {
+      background-color: #000;
+    }
+  }
+}
+
+#suneditor_editArea.sun-editor .se-wrapper .se-placeholder {
+  color: var(--font-color-6);
+  font-size: 16px;
+  font-weight: 500;
 }
